tests/baselines/reference/invalidConstraint1.errors.txt
tests/cases/compiler/invalidConstraint1.ts(4,11): error TS2344: Type '{ a: 数字; }' does not satisfy the constraint '{ a: 文字; }'.
  Types of property 'a' are incompatible.
    Type '数字' is not assignable to type '文字'.


==== tests/cases/compiler/invalidConstraint1.ts (1 errors) ====
    function f<T, U extends { a: T }>() {
        return undefined;
    }
    f<string, { a: number }>(); // should error
              ~~~~~~~~~~~~~
!!! error TS2344: Type '{ a: 数字; }' does not satisfy the constraint '{ a: 文字; }'.
!!! error TS2344:   Types of property 'a' are incompatible.
!!! error TS2344:     Type '数字' is not assignable to type '文字'.
    
    